# qa.guru_18_17_api_tests

./: pyproject.toml
schemas/: list_resource.json  users_list.json
tests/api/: test_regres.py
