[project]
name = "qa-guru-18-17"
version = "0.1.0"
description = ""
authors = [
    {name = "Max_Razzhivin",email = "max.nvo06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "qa"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
